layout bug fixed + hover on .section

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,10 @@ header {
     padding: 8px;
 }
 
+.section:hover {
+    background-color: rgba(255, 255, 255, 0.253);
+}
+
 .section span {
     display: none;
 }
@@ -133,11 +137,9 @@ header {
 
 #tote {
     max-height: calc(100vh - 100px);
+    overflow-y: scroll;
 }
 
-main {
-    overflow-y: hidden;
-}
 
 
 /* Sezione Top-Bar  */
@@ -180,6 +182,8 @@ main {
     font-weight: 500;
 }
 
+
+/* Media Query md  */
 
 @media all and (min-width:992px) {
 
